--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ The world of design felt like a canvas where I could blend technology with aesth
                     <i class="fas fa-quote-left"></i>
 
                     <p class="comment">
-                        This course helped me grasp the basics of use. I learned the difference between UI and UX processes, explored each phase of these processes in detail, and gained practical skills in wireframing and prototyping. I got familiar with various UI/UX design tools. This course laid a strong foundation for crafting user-friendly digitl experiences.
+                        This course helped me grasp the basics of UI/UX. I learned the difference between UI and UX processes, explored each phase of these processes in detail, and gained practical skills in wireframing and prototyping. I got familiar with various UI/UX design tools. This course laid a strong foundation for crafting user-friendly digitl experiences.
                     </p>
 
                     <div class="intro">
