--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ The world of design felt like a canvas where I could blend technology with aesth
                     <div class="content">
                         <h4>Photography</h4>
                         <p>category</p>
-                        <a data-effect="mfp-newspaper" href="assets/images/Portfolio/neon.jpg" class="view-btn"><i class="fas fa-search-plus"></i></a>
+                        <a data-effect="mfp-newspaper" href="assets/images/Portfolio/sunset.jpg" class="view-btn"><i class="fas fa-search-plus"></i></a>
                     </div>
                 </div>
 
@@ -321,7 +321,7 @@ The world of design felt like a canvas where I could blend technology with aesth
                 </div>
 
                 <div class="portfolio-item image photography">
-                    <img src="assets/images/Portfolio/sunset.jpg" alt="Portfolio-Image" />
+                    <img src="assets/images/Portfolio/roseee.jpg" alt="Portfolio-Image" />
                     <div class="content">
                         <h4>Photography</h4>
                         <p>category</p>
@@ -409,7 +409,7 @@ The world of design felt like a canvas where I could blend technology with aesth
                     </p>
 
                     <div class="intro">
-                        <h3><a href="https://drive.google.com/file/d/1xM2is0xWE_K55uKt0_HPnBDVHUKbw66S/view?usp=sharing"> UI/Ux for Beginners</a></h3>
+                        <h3><a href="https://drive.google.com/file/d/1xM2is0xWE_K55uKt0_HPnBDVHUKbw66S/view?usp=sharing"> UI/UX for Beginners</a></h3>
                         <h5>Great Learning</h5>
                     </div>
                 </div>
